--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+
+.app {
+  box-sizing: border-box;
+  background-color: #414552;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 2% 1%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cardWrapper {
+  margin: 0 auto;
+  width: 25%;
+  background-color: #1a1b21;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cardWrapper > img {
+  width: 100%;
+  height: 20vw;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.contact-section {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.buttons {
+  display: flex;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons a {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+.buttons a img {
+  width: 100%;
+}
+
+.cardBody > h1 {
+font-family: Inter;
+font-size: 2rem;
+font-weight: 700;
+}
+
+.cardBody > h4 {
+font-family: Inter;
+font-size: 1rem;
+font-weight: 400;
+letter-spacing: 0em;
+color: #F3BF99;
+margin-top: -10px;
+}
+
+.cardBody {
+  padding: 4% 10%;
+}
+
+.contact-section {
+  display: flex;
+  text-align: center;
+}
+
+@media all and (max-width: 600px)
+{
+    .cardWrapper {
+      width: 100%;
+      border-radius: 0;
+    }
+
+    .cardWrapper > img {
+      width: 100%;
+      height: 90vw;  
+      border-radius: 0;
+    }
+    .app{
+      padding: 0;
+    }
 }
